<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.fragment.WifiScanListFragment">
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/wifi_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:text="@string/setup_instructions"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/network_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/wifi_message"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/networks"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/btn_refresh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/ic_baseline_refresh_24"
            android:visibility="gone" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/network_layout"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true">
        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/loading_widget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true"
            app:indicatorColor="@color/purple_200"
            />
    </RelativeLayout>
    <!-- android:visibility="gone"
         android:layout_centerInParent="true"-->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/bottom_button_width"
        android:layout_height="@dimen/bottom_button_height"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/generic_margin"
        android:layout_marginBottom="@dimen/generic_margin"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:icon="@drawable/ic_baseline_arrow_back_ios_new_24"
        app:iconTint="@android:color/white" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_error_msg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/network_layout"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingStart="@dimen/generic_margin"
        android:paddingEnd="@dimen/generic_margin"
        android:text="@string/error_msg_no_network"

        android:textSize="@dimen/list_item_size"
        android:textStyle="bold" />
        <!--android:visibility="gone"
        android:textColor="@color/design_default_color_primary_variant"-->
    <!--style="@android:style/Widget.DeviceDefault.Light.ProgressBar"
    app:indicatorColor="@color/purple_200"-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/network_layout"
        android:layout_marginBottom="@dimen/bottom_button_height"
        android:layout_alignParentBottom="true">

        <RelativeLayout
            android:id="@+id/recycler_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">
            <!-- android:visibility="gone"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"-->

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:nestedScrollingEnabled="false" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/tv_join_network"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tv_height_below_list"
                android:layout_below="@+id/recycler_view"
                android:layout_alignStart="@+id/recycler_view"
                android:layout_marginTop="@dimen/generic_margin"
                android:layout_marginEnd="@dimen/generic_margin"
                android:layout_marginBottom="@dimen/generic_margin"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/generic_margin"
                android:paddingEnd="@dimen/generic_margin"
                android:text="@string/join_other_network"
                android:textColor="@color/design_default_color_primary_variant"
                android:textSize="@dimen/list_item_size"
                android:textStyle="bold" />
            <!--android:layout_centerHorizontal="true"-->


        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>