<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="40dp"
    android:layout_marginBottom="40dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout_sending_wifi_creds"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_tick_1"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_checkbox_unselected" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/prov_progress_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    android:visibility="visible"
                    app:indicatorSize="20dp"
                    app:showDelay="@integer/delay_showing_progress_indicator_in_ms"
                    app:trackThickness="2dp" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/prov_step_1"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_prov_error_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/color_orange"
            android:textSize="12sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_applying_wifi_creds"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_tick_2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_checkbox_unselected" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/prov_progress_2"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    app:indicatorSize="20dp"
                    app:trackThickness="2dp"
                    app:showDelay="@integer/delay_showing_progress_indicator_in_ms"
                    android:visibility="gone" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/prov_step_2"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_prov_error_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/color_orange"
            android:textSize="12sp"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_checking_provisioning_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_tick_3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_checkbox_unselected" />

                <com.google.android.material.progressindicator.CircularProgressIndicator
                    android:id="@+id/prov_progress_3"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_centerInParent="true"
                    android:indeterminate="true"
                    app:indicatorSize="20dp"
                    app:trackThickness="2dp"
                    app:showDelay="@integer/delay_showing_progress_indicator_in_ms"
                    android:visibility="gone" />

                <!--<androidx.core.widget.ContentLoadingProgressBar
                    android:id="@+id/prov_progress_3"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:visibility="gone" />-->

            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/prov_step_3"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_prov_error_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/color_orange"
            android:textSize="12sp"
            android:visibility="gone" />

    </LinearLayout>

</LinearLayout>